# Affiliatehub

./: .env.example  .env.test  .eslintrc.json  .gitignore  .lintstagedrc.json  Makefile  PLAN.md  commitlint.config.js  docker-compose.yml  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_categories.sql  003_create_products.sql  004_create_affiliate_links.sql  005_create_clicks.sql  006_create_sessions.sql  007_create_conversions.sql  008_create_payouts.sql  009_create_analytics.sql  010_create_reviews.sql  seed.sql
backend/src/config/: app.rs  database.rs  mod.rs
backend/src/models/: affiliate_link.rs  analytics.rs  category.rs  click.rs  conversion.rs  mod.rs  payout.rs  product.rs  review.rs  session.rs  user.rs
backend/src/utils/: crypto.rs  errors.rs  mod.rs  pagination.rs  slug.rs  validation.rs
frontend/: Dockerfile  package-lock.json  pnpm-lock.yaml
src/: App.jsx  main.jsx
